# ipython-mcp

./: .gitignore  LICENSE  README.md  ipython_mcp_server.py  pyproject.toml
ipython_mcp/: server.py
src/ipython_mcp/: __init__.py  __main__.py  default_connection.json  server.py
